Manage m_preview::deco pointers on plugin juggling

BUG: 304026
REVIEW: 105721